# tfac-ccle

./: .Rhistory  .gitignore  .jenkinsfile  .pybiomart.sqlite  Generate_pickles.ipynb  Logistic.ipynb  Make_pickles.py  Partial_Tucker.ipynb  ProteinFactors.ipynb  RA_Tensor_DataSet.nc  README.md  Test.py  Untitled.ipynb  Working.ipynb  analysis.ipynb  biomart.ipynb  findcuts.ipynb  foldfig.ipynb  geneMatch.ipynb  gseaohsu.ipynb  hello.py  makefile  pseudoinvnorm.py  pyproject.toml  requirements.txt
.github/workflows/: autopep8.yml  build.yml  test.yml
fold_dfs/: 0.pkl  2.pkl  3.pkl  4.pkl  5.pkl  6.pkl  7.pkl  8.pkl
gsea_dfs/: 2.pkl  23.pkl  28.pkl  29.pkl  3.pkl  7.pkl
gseadfs/: 10.pkl  14.pkl  15.pkl  16.pkl  21.pkl  25.pkl  27.pkl
manuscript/: 03.results.md  04.discussion.md  06.methods.md  08.acknowledgements.md  metadata.yaml
tfac/: CCLE.py  CMTF.py  Data_Mod.py  GeneAlignment.ipynb  LoadData.ipynb  MRSA_dataHelpers.py  OHSUplots.ipynb  PCA_functions.py  SVR.ipynb  Tensor_stack.ipynb  componentWeights.py  cutMissingValues.ipynb  dataHelpers.py  dataOrg.py  dataProcess.py  drugOrg.py  fixCutData.ipynb  fixCutDataScript.py  gene_module.py  import_response.py  missingDataEval.ipynb  newCompName.py  parafac2.py  plotHelpers.py  pseudoinvnorm.py  regression.py  responsedata.py  tensor.py  test.ipynb  test1.ipynb  tucker.py
tfac/data/: 01_Laura_Heiser__Sean_Gross_A.csv  01_Laura_Heiser__Sean_Gross_B.csv  01_Laura_Heiser__Sean_Gross_C.csv  DrugData.csv  GeneData_All.xlsx  Methylation_Identifiers.xlsx  cell_comps_2.hdf5  geneDavid.xlsx  geneIdentifiers.xlsx  gene_comps_2.hdf5  measurement_comps_2.hdf5  test.txt
tfac/figures/: common.py  figClust.py  figure1.py  figure10.py  figure11.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  (+7 more)
(+53 files in other folders)
