[tool.poetry]
name = "tfac"
version = "0.1.0"
description = ""
authors = ["Aaron Meyer <git@ameyer.me>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
