[tool.poetry]
name = "tfac"
version = "0.1.0"
description = ""
authors = ["Aaron Meyer <git@ameyer.me>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.5"
scipy = "^1.4.1"
manubot = "^0.4.0"
pandoc-fignos = "^2.2.0"
pandoc-eqnos = "^2.1.1"
pandoc-tablenos = "^2.1.1"
synapseclient = "^2.0.0"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
svgutils = "^0.3.1"
scikit-learn = "^0.23.1"
pybiomart = "^0.2.0"
h5py = "^2.10.0"
tensorly = { git = "https://github.com/tensorly/tensorly.git", rev = "b479f18" }

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.9.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
