[tool.poetry]
name = "tfac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.21"
tensorpack = {git = "https://github.com/meyer-lab/tensorpack.git", rev = "main"}
svgutils = "^0.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.0"
seaborn = "^0.11.2"
xarray = "^2022.3.0"

[tool.poetry.dev-dependencies]
pytest = "6.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "tfac.figures.common:genFigure"